# src/main/java/za/co/standardbank/assessment1/persistence/entities/User.java
@@ -1,0 +1,38 @@
+package za.co.standardbank.assessment1.persistence.entities;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import za.co.standardbank.assessment1.domain.constant.UserStatus;
+
+import javax.persistence.*;
+
+@Data
+@Entity
+@Table(name = "user")
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class User {
+    @Id
+    @Column
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(name = "firstname")
+    private String firstname;
+
+    @Column(name = "surname")
+    private String surname;
+
+    @Column(name = "mobile_number")
+    private String mobileNumber;
+
+    @Column(name = "email")
+    private String email;
+
+    @Enumerated(EnumType.STRING)
+    @Column(name = "status")
+    private UserStatus status;
+}
