# src/main/resources/docs/v2/api.yml
@@ -10,26 +10,6 @@ tags:
   - name: user
     description: User operations
 paths:
-  "/v2/**":
-    get:
-      tags:
-        - api-docs-controller
-      operationId: getDocumentation
-      description: Retrieve api-doc
-      summary: Retrieve api-doc
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: string
-        default:
-          description: error occurred - see status code and problem object for more information.
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
   /user:
     post:
       summary: Register a new user
@@ -66,31 +46,20 @@ components:
     RegisterUserRequest:
       type: object
       properties:
-        id:
-          description: ID of the pokemon
-          type: integer
-          format: int32
-        name:
-          description: Name of the pokemon
+        firstname:
+          description: Firstname of the user
           type: string
-        height:
-          description: Height of the pokemon in inches
-          type: integer
-          format: int32
-        weight:
-          description: Weight of the pokemon in lbs
-          type: integer
-          format: int32
-        baseExperience:
-          description: Base Experience of the pokemon in XP
-          type: integer
-          format: int32
-        images:
-          $ref: '#/components/schemas/Images'
-        types:
-          type: array
-          items:
-            type: string
+        surname:
+          description: Surname of the user
+          type: string
+        mobileNumber:
+          description: User's mobile number
+          type: string
+        email:
+          description: User's email address
+          type: string
+          format: email
+          example: user@example.com
     Problem:
       type: object
       description: |
